- Skinning changed to dynamic version

--- a/Main/Source code/Elysium.Test/MainWindow.xaml
+++ b/Main/Source code/Elysium.Test/MainWindow.xaml
@@ -3,10 +3,6 @@
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:metro="http://schemas.codeplex.com/elysium"
               xmlns:params="http://schemas.codeplex.com/elysium/params"
-              params:Design.Theme="Dark"
-              params:Design.AccentBrush="{x:Static metro:AccentBrushes.Blue}"
-              params:Design.ContrastBrush="White"
-              Background="{DynamicResource BackgroundBrush}"
               Title="Window" IsMainWindow="True"
               params:Window.MinimizeButtonToolTip="Minimize"
               params:Window.MaximizeButtonToolTip="Maximize"
@@ -186,7 +182,7 @@
             <metro:DropDownCommandButton Header="More"
                                          metro:ApplicationBar.Dock="Right"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}">
-                <Path Data="{StaticResource AdvancedIcon}"
+                <Path Data="{DynamicResource {ComponentResourceKey TypeInTargetAssembly={x:Type metro:Resources}, ResourceId=AdvancedIcon}}"
                       Fill="Black"
                       Stroke="Black"
                       Width="24" Height="24"/>
@@ -476,8 +472,8 @@
                         <MenuItem Header="Copy">
                             <MenuItem.Icon>
                                 <Path Data="{StaticResource SampleIcon16px}"
-                                      Fill="{DynamicResource AccentBrush}"
-                                      Stroke="{DynamicResource AccentBrush}"
+                                      Fill="{DynamicResource {x:Static metro:Resources.AccentBrushKey}}"
+                                      Stroke="{DynamicResource {x:Static metro:Resources.AccentBrushKey}}"
                                       Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
@@ -545,7 +541,7 @@
                       Grid.RowSpan="5"
                       Background="Transparent"
                       metro:ApplicationBar.PreventsOpen="true">
-                    <TextBlock Foreground="{DynamicResource MiddleLightBrush}"
+                    <TextBlock Foreground="{DynamicResource {x:Static metro:Resources.MiddleLightBrushKey}}"
                                FontSize="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.HeaderFontSize)}"
                                Text="Click here to see ContextMenu"
                                TextOptions.TextFormattingMode="Ideal"
@@ -560,8 +556,8 @@
                             <MenuItem Header="Copy">
                                 <MenuItem.Icon>
                                     <Path Data="{StaticResource SampleIcon16px}"
-                                          Fill="{DynamicResource AccentBrush}"
-                                          Stroke="{DynamicResource AccentBrush}"
+                                          Fill="{DynamicResource {x:Static metro:Resources.AccentBrushKey}}"
+                                          Stroke="{DynamicResource {x:Static metro:Resources.AccentBrushKey}}"
                                           Width="16" Height="16"/>
                                 </MenuItem.Icon>
                             </MenuItem>
