--- a/Main/Source code/Elysium/Themes/DarkBrushes.xaml
+++ b/Main/Source code/Elysium/Themes/DarkBrushes.xaml
@@ -1,30 +1,31 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" >
+                    xmlns:presentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+                    xmlns:root="clr-namespace:Elysium">
 
-    <SolidColorBrush x:Key="TransparentBrush"
+    <SolidColorBrush x:Key="{x:Static root:Resources.TransparentBrushKey}"
                      Color="#00171717"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="SemitransparentBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.SemitransparentBrushKey}"
                      Color="#20171717"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="BackgroundBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.BackgroundBrushKey}"
                      Color="#FF171717"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="ForegroundBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.ForegroundBrushKey}"
                      Color="#FFFFFFFF"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="HighlightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.HighLightBrushKey}"
                      Color="#FF313131"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="MiddleLightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.MiddleLightBrushKey}"
                      Color="#FF848484"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="LowlightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.LowLightBrushKey}"
                      Color="#FFBABABA"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="DisabledBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.DisabledBrushKey}"
                      Color="#FF5C5956"
-                     PresentationOptions:Freeze="True"/>
+                     presentationOptions:Freeze="True"/>
     
 </ResourceDictionary>
