--- a/Main/Source code/Elysium.Test/App.xaml
+++ b/Main/Source code/Elysium.Test/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Elysium.Test.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml" Startup="StartupHandler">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
