--- a/Main/Source code/Elysium/Properties/AssemblyInfo.tt
+++ b/Main/Source code/Elysium/Properties/AssemblyInfo.tt
@@ -29,8 +29,10 @@ using System.Windows.Markup;
 [assembly: ComVisible(false)]
 [assembly: CLSCompliant(true)]
 
+[assembly: XmlnsDefinition("http://schemas.microsoft.com/winfx/2006/xaml/presentation", "System.Windows")]
 [assembly: XmlnsDefinition("http://schemas.codeplex.com/elysium", "Elysium")]
 [assembly: XmlnsDefinition("http://schemas.codeplex.com/elysium", "Elysium.Controls")]
+[assembly: XmlnsDefinition("http://schemas.codeplex.com/elysium", "Elysium.Controls.Primitives")]
 [assembly: XmlnsDefinition("http://schemas.codeplex.com/elysium", "Elysium.Converters")]
 [assembly: XmlnsDefinition("http://schemas.codeplex.com/elysium/params", "Elysium.Parameters")]
 [assembly: XmlnsPrefix("http://schemas.codeplex.com/elysium", "metro")]
