--- a/Main/Source code/Elysium/Themes/ApplicationBar/ApplicationBar.xaml
+++ b/Main/Source code/Elysium/Themes/ApplicationBar/ApplicationBar.xaml
@@ -1,25 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
-                    xmlns:controls="clr-namespace:Elysium.Controls">
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:controls="clr-namespace:Elysium.Controls"
+                    xmlns:params="clr-namespace:Elysium.Parameters">
     
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButton.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/ToggleCommandButton.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/DropDownCommandButton.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButton.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/ToggleCommandButton.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/DropDownCommandButton.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <Style x:Key="{x:Type controls:ApplicationBar}" TargetType="{x:Type controls:ApplicationBar}">
         <Style.Resources>
-            <Style TargetType="{x:Type controls:CommandButton}" BasedOn="{StaticResource CommandButtonApplicationBarStyle}"/>
-            <Style TargetType="{x:Type controls:ToggleCommandButton}" BasedOn="{StaticResource ToggleCommandButtonApplicationBarStyle}"/>
-            <Style TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource DropDownCommandButtonApplicationBarStyle}"/>
+            <Style TargetType="{x:Type controls:CommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.CommandButtonStyleKey}}"/>
+            <Style TargetType="{x:Type controls:ToggleCommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.ToggleCommandButtonStyleKey}}"/>
+            <Style TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.DropDownCommandButtonStyleKey}}"/>
         </Style.Resources>        
-        <Setter Property="Background" Value="{StaticResource AccentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource LowlightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
@@ -53,7 +55,7 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}}, ConverterParameter=18}">
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
             </DataTrigger>
         </Style.Triggers>
