--- a/Main/Source code/Elysium/Themes/Buttons/CheckBox.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/CheckBox.xaml
@@ -1,31 +1,33 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
                     xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <Style TargetType="{x:Type CheckBox}">
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultThickness), Mode=OneWay}"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}}"/>
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="VerticalContentAlignment" Value="Top"/>
-        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
+        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Left}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type CheckBox}">
-                    <BulletDecorator Background="{StaticResource TransparentBrush}"
+                    <BulletDecorator Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                                      TextBlock.Foreground="{TemplateBinding Foreground}"
                                      TextBlock.FontFamily="{TemplateBinding FontFamily}"
                                      TextBlock.FontSize="{TemplateBinding FontSize}"
@@ -40,7 +42,7 @@
                                     Height="{TemplateBinding params:Bullet.DecoratorSize}">
                                 <Grid>
                                     <Path x:Name="CheckBullet"
-                                          Stroke="{StaticResource AccentBrush}"
+                                          Stroke="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"
                                           StrokeThickness="{TemplateBinding params:General.BoldThicknessValue}"
                                           Stretch="Fill"
                                           Visibility="Collapsed"
@@ -53,7 +55,7 @@
                                         </Path.Data>
                                     </Path>
                                     <Path x:Name="IndeterminateBullet"
-                                          Fill="{StaticResource AccentBrush}"
+                                          Fill="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"
                                           StrokeThickness="0"
                                           Stretch="Fill"
                                           Visibility="Collapsed"
@@ -68,7 +70,7 @@
                                 </Grid>
                             </Border>
                         </BulletDecorator.Bullet>
-                        <Border Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}">
+                        <Border Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Left}">
                             <ContentPresenter Margin="{TemplateBinding Padding}"
                                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
@@ -89,8 +91,8 @@
                             </MultiTrigger.Setters>
                         </MultiTrigger>						
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter TargetName="CheckBullet" Property="Path.Stroke" Value="{StaticResource DisabledBrush}"/>
-                            <Setter TargetName="IndeterminateBullet" Property="Path.Fill" Value="{StaticResource DisabledBrush}"/>
+                            <Setter TargetName="CheckBullet" Property="Path.Stroke" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                            <Setter TargetName="IndeterminateBullet" Property="Path.Fill" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
                         </Trigger>						
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -98,17 +100,17 @@
         </Setter>        
         <Style.Triggers>			
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource LowlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>
         </Style.Triggers>	        
     </Style>
