--- a/Main/Source code/Elysium/Themes/Buttons/CommandButton.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/CommandButton.xaml
@@ -1,15 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
-                    xmlns:primitives="clr-namespace:Elysium.Controls.Primitives"
-                    xmlns:controls="clr-namespace:Elysium.Controls">
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:controls="clr-namespace:Elysium.Controls"
+                    xmlns:primitives="clr-namespace:Elysium.Controls.Primitives">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="{x:Type controls:CommandButton}" TargetType="{x:Type controls:CommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}"/>
-    
-    <Style x:Key="CommandButtonApplicationBarStyle" TargetType="{x:Type controls:CommandButton}" BasedOn="{StaticResource CommandButtonBaseApplicationBarStyle}"/>
+
+    <Style x:Key="{x:Static controls:ApplicationBar.CommandButtonStyleKey}" TargetType="{x:Type controls:CommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.CommandButtonBaseStyleKey}}"/>
 
 </ResourceDictionary>
