--- a/Main/Source code/Elysium/Themes/Buttons/CommandButtonBase.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/CommandButtonBase.xaml
@@ -1,18 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
-                    xmlns:primitives="clr-namespace:Elysium.Controls.Primitives">
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:controls="clr-namespace:Elysium.Controls"
+                    xmlns:primitives="clr-namespace:Elysium.Controls.Primitives"
+                    xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="{x:Type primitives:CommandButtonBase}" TargetType="{x:Type primitives:CommandButtonBase}">
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource LowlightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldThickness), Mode=OneWay}"/>
-        <Setter Property="params:CommandButtons.Mask" Value="{StaticResource LowlightBrush}"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
@@ -20,13 +23,13 @@
         <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
         <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}}"/>
         <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.SemiBoldPadding), Mode=OneWay}"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type primitives:CommandButtonBase}">
-                    <Grid Background="{StaticResource TransparentBrush}"
+                    <Grid Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                           TextBlock.Foreground="{TemplateBinding Foreground}"
                           TextBlock.FontFamily="{TemplateBinding FontFamily}"
                           TextBlock.FontSize="{TemplateBinding FontSize}"
@@ -45,7 +48,7 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding Background}"
                                  Stroke="{TemplateBinding BorderBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"/>
@@ -77,36 +80,36 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}}, ConverterParameter=18}">
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
             </DataTrigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource ForegroundBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource MiddleLightBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="CommandButtonBaseApplicationBarStyle" TargetType="{x:Type primitives:CommandButtonBase}">
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ContrastBrush}"/>
+    <Style x:Key="{x:Static controls:ApplicationBar.CommandButtonBaseStyleKey}" TargetType="{x:Type primitives:CommandButtonBase}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldThickness), Mode=OneWay}"/>
-        <Setter Property="params:CommandButtons.Mask" Value="{StaticResource ContrastBrush}"/>
-        <Setter Property="Foreground" Value="{StaticResource ContrastBrush}"/>
+        <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>      
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}}"/>
         <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.SemiBoldPadding), Mode=OneWay}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
@@ -114,7 +117,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type primitives:CommandButtonBase}">
-                    <Grid Background="{StaticResource TransparentBrush}"
+                    <Grid Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                           TextBlock.Foreground="{TemplateBinding Foreground}"
                           TextBlock.FontFamily="{TemplateBinding FontFamily}"
                           TextBlock.FontSize="{TemplateBinding FontSize}"
@@ -133,14 +136,14 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding Background}"
                                  Stroke="{TemplateBinding BorderBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"/>
                         <Ellipse Grid.Row="0"
                                  Fill="{TemplateBinding params:CommandButtons.Mask}"
-                                 Stroke="{StaticResource TransparentBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 Stroke="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"
@@ -181,23 +184,23 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}}, ConverterParameter=18}">
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
             </DataTrigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource SemitransparentContrastBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource ContrastBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.SemitransparentContrastBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource AccentBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
