--- a/Main/Source code/Elysium/Themes/Buttons/DropDownCommandButton.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/DropDownCommandButton.xaml
@@ -1,16 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:controls="clr-namespace:Elysium.Controls"
                     xmlns:primitives="clr-namespace:Elysium.Controls.Primitives"
-                    xmlns:controls="clr-namespace:Elysium.Controls">
+                    xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Menus/Submenu.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Menus/Submenu.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="DropDownCommandButtonSubmenuStyle" TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource {x:Type controls:Submenu}}">
+    <Style x:Key="{x:Static controls:DropDownCommandButton.SubmenuStyleKey}" TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource {x:Type controls:Submenu}}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:Submenu}">
@@ -51,7 +53,7 @@
                                                       Opacity="0.7"/>
                                 </Setter.Value>
                             </Setter>
-                            <Setter TargetName="LayoutRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                            <Setter TargetName="LayoutRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                             <Setter TargetName="LayoutRoot" Property="Padding" Value="4"/>
                         </DataTrigger>
                     </ControlTemplate.Triggers>
@@ -62,12 +64,12 @@
     
     <Style x:Key="{x:Type controls:DropDownCommandButton}" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}">
         <Style.Resources>
-            <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource DropDownCommandButtonSubmenuStyle}"/>
+            <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource {x:Static controls:DropDownCommandButton.SubmenuStyleKey}}"/>
         </Style.Resources>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:DropDownCommandButton}">
-                    <Grid Background="{StaticResource TransparentBrush}"
+                    <Grid Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                           TextBlock.Foreground="{TemplateBinding Foreground}"
                           TextBlock.FontFamily="{TemplateBinding FontFamily}"
                           TextBlock.FontSize="{TemplateBinding FontSize}"
@@ -86,7 +88,7 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding Background}"
                                  Stroke="{TemplateBinding BorderBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"/>
@@ -127,20 +129,20 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsDropDownOpen" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource MiddleLightBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="DropDownCommandButtonApplicationBarStyle" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource CommandButtonBaseApplicationBarStyle}">        
+    <Style x:Key="{x:Static controls:ApplicationBar.DropDownCommandButtonStyleKey}" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.CommandButtonBaseStyleKey}}">        
         <Style.Resources>
-            <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource DropDownCommandButtonSubmenuStyle}"/>
+            <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource {x:Static controls:DropDownCommandButton.SubmenuStyleKey}}"/>
         </Style.Resources>        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:DropDownCommandButton}">
-                    <Grid Background="{StaticResource TransparentBrush}"
+                    <Grid Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                           TextBlock.Foreground="{TemplateBinding Foreground}"
                           TextBlock.FontFamily="{TemplateBinding FontFamily}"
                           TextBlock.FontSize="{TemplateBinding FontSize}"
@@ -159,14 +161,14 @@
                                  Grid.Row="0"
                                  Fill="{TemplateBinding Background}"
                                  Stroke="{TemplateBinding BorderBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"/>
                         <Ellipse Grid.Row="0"
                                  Fill="{TemplateBinding params:CommandButtons.Mask}"
-                                 Stroke="{StaticResource TransparentBrush}"
-                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                                 Stroke="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
+                                 StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                                  Stretch="Fill"
                                  HorizontalAlignment="Center"
                                  VerticalAlignment="Center"
@@ -216,9 +218,9 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsDropDownOpen" Value="True">
-                <Setter Property="Background" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource AccentBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
