--- a/Main/Source code/Elysium/Themes/Buttons/RepeatButton.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/RepeatButton.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/ButtonBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/ButtonBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ButtonsBaseStyle}">
+    <Style TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ButtonBase}, ResourceId=MetroStyle}}">
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
     </Style>
