--- a/Main/Source code/Elysium/Themes/Buttons/ToggleCommandButton.xaml
+++ b/Main/Source code/Elysium/Themes/Buttons/ToggleCommandButton.xaml
@@ -1,28 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:controls="clr-namespace:Elysium.Controls"
                     xmlns:primitives="clr-namespace:Elysium.Controls.Primitives"
-                    xmlns:controls="clr-namespace:Elysium.Controls">
+                    xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/CommandButtonBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
+    
     <Style x:Key="{x:Type controls:ToggleCommandButton}" TargetType="{x:Type controls:ToggleCommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}">        
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource MiddleLightBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
-    
-    <Style x:Key="ToggleCommandButtonApplicationBarStyle" TargetType="{x:Type controls:ToggleCommandButton}" BasedOn="{StaticResource CommandButtonBaseApplicationBarStyle}">
+
+    <Style x:Key="{x:Static controls:ApplicationBar.ToggleCommandButtonStyleKey}" TargetType="{x:Type controls:ToggleCommandButton}" BasedOn="{StaticResource {x:Static controls:ApplicationBar.CommandButtonBaseStyleKey}}">
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="BorderBrush" Value="{StaticResource ContrastBrush}"/>
-                <Setter Property="params:CommandButtons.Mask" Value="{StaticResource AccentBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
+                <Setter Property="params:CommandButtons.Mask" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
