--- a/Main/Source code/Elysium/Themes/Icons.xaml
+++ b/Main/Source code/Elysium/Themes/Icons.xaml
@@ -1,7 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:controls="clr-namespace:Elysium.Controls">
 
-    <GeometryGroup x:Key="AdvancedIcon">
+    <GeometryGroup x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=AdvancedIcon}">
         <EllipseGeometry Center="3,3"
                          RadiusX="2.5" RadiusY="2.5"/>
         <EllipseGeometry Center="12,3"
@@ -10,13 +12,13 @@
                          RadiusX="2.5" RadiusY="2.5"/>
     </GeometryGroup>
     
-    <GeometryGroup x:Key="MinimizeIcon"
+    <GeometryGroup x:Key="{x:Static controls:Window.MinimizeIconKey}"
                    FillRule="EvenOdd">
         <RectangleGeometry Rect="0,0,10,10"/>
         <RectangleGeometry Rect="0,0,10,7"/>
     </GeometryGroup>
 
-    <GeometryGroup x:Key="MaximizeIcon">
+    <GeometryGroup x:Key="{x:Static controls:Window.MaximizeIconKey}">
         <LineGeometry StartPoint="0,0.5" EndPoint="10,0.5"/>
         <LineGeometry StartPoint="0,1.5" EndPoint="10,1.5"/>
         <LineGeometry StartPoint="0,2.5" EndPoint="10,2.5"/>
@@ -25,7 +27,7 @@
         <LineGeometry StartPoint="1,9.5" EndPoint="9,9.5"/>
     </GeometryGroup>
 
-    <GeometryGroup x:Key="RestoreIcon">
+    <GeometryGroup x:Key="{x:Static controls:Window.RestoreIconKey}">
         <LineGeometry StartPoint="3,0.5" EndPoint="10,0.5"/>
         <LineGeometry StartPoint="3,1.5" EndPoint="10,1.5"/>
         <LineGeometry StartPoint="3.5,2" EndPoint="3.5,3"/>
@@ -38,7 +40,7 @@
         <LineGeometry StartPoint="1,9.5" EndPoint="6,9.5"/>
     </GeometryGroup>
 
-    <GeometryGroup x:Key="CloseIcon">
+    <GeometryGroup x:Key="{x:Static controls:Window.CloseIconKey}">
         <LineGeometry StartPoint="1.5,0.5" EndPoint="9.5,8.5"/>
         <LineGeometry StartPoint="0.5,1.5" EndPoint="8.5,9.5"/>
         <LineGeometry StartPoint="1.5,1.5" EndPoint="8.5,8.5"/>
