--- a/Main/Source code/Elysium/Themes/LightBrushes.xaml
+++ b/Main/Source code/Elysium/Themes/LightBrushes.xaml
@@ -1,30 +1,31 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
-    
-    <SolidColorBrush x:Key="TransparentBrush"
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:presentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+
+    <SolidColorBrush x:Key="{x:Static root:Resources.TransparentBrushKey}"
                      Color="#00FFFFFF"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="SemitransparentBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.SemitransparentBrushKey}"
                      Color="#20FFFFFF"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="BackgroundBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.BackgroundBrushKey}"
                      Color="#FFFFFFFF"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="ForegroundBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.ForegroundBrushKey}"
                      Color="#FF000000"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="HighlightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.HighLightBrushKey}"
                      Color="#FFDEDEDE"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="MiddleLightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.MiddleLightBrushKey}"
                      Color="#FF777777"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="LowlightBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.LowLightBrushKey}"
                      Color="#FF4D4D4D"
-                     PresentationOptions:Freeze="True"/>
-    <SolidColorBrush x:Key="DisabledBrush"
+                     presentationOptions:Freeze="True"/>
+    <SolidColorBrush x:Key="{x:Static root:Resources.DisabledBrushKey}"
                      Color="#FFB8B5B2"
-                     PresentationOptions:Freeze="True"/>
-    
+                     presentationOptions:Freeze="True"/>
+
 </ResourceDictionary>
