--- a/Main/Source code/Elysium/Themes/Menus/MenuItem.xaml
+++ b/Main/Source code/Elysium/Themes/Menus/MenuItem.xaml
@@ -1,20 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
                     xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}" TargetType="{x:Type Separator}">
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource HighlightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultThickness), Mode=OneWay}"/>        
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>        
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.SemiBoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"/>
+        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.SemiBoldPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter='Left, Right'}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Setter Property="SnapsToDevicePixels" Value="True"/>        
@@ -25,7 +27,7 @@
                             BorderThickness="0"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Line Stroke="{TemplateBinding BorderBrush}"
-                              StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ThicknessToDoubleConverter}}"
+                              StrokeThickness="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}}"
                               X1="0" Y1="0"
                               X2="1" Y2="0"
                               Stretch="Fill"
@@ -91,7 +93,7 @@
                             </Border>
                             <Rectangle x:Name="PopupMask"
                                        Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBackground)}"
-                                       Margin="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessConverter}, ConverterParameter='Left'}"
+                                       Margin="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left'}"
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Top"
                                        Width="{Binding ElementName=ContentHost, Path=ActualWidth}"/>
@@ -115,8 +117,8 @@
                     <Condition SourceName="PART_Popup" Property="params:DropDown.IsDefaultVerticalPosition" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter TargetName="LayoutRoot" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Top, Right'}"/>
-                    <Setter TargetName="PopupMask" Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessToDoubleConverter}, ConverterParameter='Top'}"/>
+                    <Setter TargetName="LayoutRoot" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Top, Right'}"/>
+                    <Setter TargetName="PopupMask" Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}, ConverterParameter='Top'}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <MultiTrigger>
@@ -126,8 +128,8 @@
                     <Condition SourceName="PART_Popup" Property="params:DropDown.IsDefaultVerticalPosition" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter TargetName="LayoutRoot" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Right, Bottom'}"/>
-                    <Setter TargetName="PopupMask" Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessToDoubleConverter}, ConverterParameter='Bottom'}"/>
+                    <Setter TargetName="LayoutRoot" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Right, Bottom'}"/>
+                    <Setter TargetName="PopupMask" Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}, ConverterParameter='Bottom'}"/>
                     <Setter TargetName="PopupMask" Property="VerticalAlignment" Value="Bottom"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
@@ -145,7 +147,7 @@
                                                           Opacity="0.3"/>
                         </Setter.Value>
                     </Setter>
-                    <Setter TargetName="PopupRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                    <Setter TargetName="PopupRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                     <Setter TargetName="PopupRoot" Property="Padding" Value="0,0,6,6"/>
                 </MultiDataTrigger.Setters>
             </MultiDataTrigger>
@@ -163,7 +165,7 @@
                                                           Opacity="0.3"/>
                         </Setter.Value>
                     </Setter>
-                    <Setter TargetName="PopupRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                    <Setter TargetName="PopupRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                     <Setter TargetName="PopupRoot" Property="Padding" Value="0,4,4,0"/>
                 </MultiDataTrigger.Setters>
             </MultiDataTrigger>
@@ -226,12 +228,12 @@
                                   Grid.Column="1"
                                   ContentSource="Header"
                                   RecognizesAccessKey="True"
-                                  Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"
+                                  Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter='Left, Right'}"
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center"/>
                 <Polygon x:Name="ArrowGlyph"
                          Grid.Column="2"
-                         Fill="{StaticResource MiddleLightBrush}"
+                         Fill="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"
                          StrokeThickness="0"
                          Stretch="Uniform"
                          Margin="{TemplateBinding params:MenuItem.ArrowMargin}"
@@ -284,7 +286,7 @@
                 <Setter TargetName="IconHost" Property="Visibility" Value="Collapsed"/>
             </Trigger>
             <Trigger Property="IsSubmenuOpen" Value="True">
-                <Setter TargetName="ArrowGlyph" Property="Fill" Value="{StaticResource AccentBrush}"/>
+                <Setter TargetName="ArrowGlyph" Property="Fill" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsSuspendingPopupAnimation" Value="True">
                 <Setter TargetName="PART_Popup" Property="PopupAnimation" Value="None"/>
@@ -301,7 +303,7 @@
                                           Opacity="0.3"/>
                     </Setter.Value>
                 </Setter>
-                <Setter TargetName="PopupRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                <Setter TargetName="PopupRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                 <Setter TargetName="PopupRoot" Property="Padding" Value="0,0,6,6"/>
             </DataTrigger>
         </ControlTemplate.Triggers>
@@ -333,7 +335,7 @@
                 </Grid.ColumnDefinitions>
                 <Path x:Name="CheckBullet"
                       Grid.Column="0"
-                      Stroke="{StaticResource LowlightBrush}"
+                      Stroke="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"
                       StrokeThickness="{TemplateBinding params:General.BoldThicknessValue}"
                       Stretch="Uniform"
                       Visibility="Collapsed"
@@ -356,12 +358,12 @@
                                   Grid.Column="1"
                                   ContentSource="Header"
                                   RecognizesAccessKey="True"
-                                  Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"
+                                  Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter='Left, Right'}"
                                   HorizontalAlignment="Left"
                                   VerticalAlignment="Center"/>
                 <TextBlock Grid.Column="2"
                            Text="{TemplateBinding InputGestureText}"
-                           Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter='Left, Right'}"
+                           Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter='Left, Right'}"
                            HorizontalAlignment="Left"
                            VerticalAlignment="Center"/>
             </Grid>
@@ -380,8 +382,8 @@
     </ControlTemplate>
 
     <Style TargetType="{x:Type MenuItem}">
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource TransparentBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=Foreground, Mode=OneWay}"/>
         <Setter Property="FontFamily" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=FontFamily, Mode=OneWay}"/>
@@ -393,7 +395,7 @@
         <Setter Property="TextOptions.TextRenderingMode" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(TextOptions.TextRenderingMode), Mode=OneWay}"/>
         <Setter Property="RenderOptions.ClearTypeHint" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(RenderOptions.ClearTypeHint), Mode=OneWay}"/>
         <Setter Property="Focusable" Value="True"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}}"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="ScrollViewer.PanningMode" Value="Both"/>
         <Setter Property="HorizontalContentAlignment" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=HorizontalContentAlignment}"/>
@@ -405,11 +407,11 @@
         <Style.Triggers>            
             <Trigger Property="Role" Value="TopLevelHeader">
                 <Setter Property="Template" Value="{StaticResource {x:Static MenuItem.TopLevelHeaderTemplateKey}}"/>
-                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Top, Right'}"/>
+                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Top, Right'}"/>
             </Trigger>
             <Trigger Property="Role" Value="TopLevelItem">
                 <Setter Property="Template" Value="{StaticResource {x:Static MenuItem.TopLevelItemTemplateKey}}"/>
-                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Top, Right'}"/>
+                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type MenuBase}}, Path=(params:MenuBase.SubmenuBorderThickness), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Top, Right'}"/>
             </Trigger>
             <Trigger Property="Role" Value="SubmenuHeader">
                 <Setter Property="Template" Value="{StaticResource {x:Static MenuItem.SubmenuHeaderTemplateKey}}"/>
@@ -418,8 +420,8 @@
                 <Setter Property="Template" Value="{StaticResource {x:Static MenuItem.SubmenuItemTemplateKey}}"/>
             </Trigger>
             <Trigger Property="IsHighlighted" Value="True">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
             </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
@@ -427,8 +429,8 @@
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
-                    <Setter Property="BorderBrush" Value="{StaticResource HighlightBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <MultiTrigger>
@@ -437,12 +439,12 @@
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
-                    <Setter Property="BorderBrush" Value="{StaticResource HighlightBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>            
         </Style.Triggers>        
     </Style>
