--- a/Main/Source code/Elysium/Themes/Ranges/Slider.xaml
+++ b/Main/Source code/Elysium/Themes/Ranges/Slider.xaml
@@ -1,13 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
                     xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="SliderRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
-        <Setter Property="Background" Value="{StaticResource MiddleLightBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonStyle}" TargetType="{x:Type RepeatButton}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
@@ -28,23 +30,23 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
     
-    <Style x:Key="SliderRepeatButtonValuableStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource SliderRepeatButtonStyle}">        
-        <Setter Property="Background" Value="{StaticResource AccentBrush}"/>        
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonValuableStyle}" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonStyle}}">        
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>        
         <Style.Triggers>            
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>            
         </Style.Triggers>        
     </Style>
 
-    <Style x:Key="SliderThumbStyle" TargetType="{x:Type Thumb}">        
-        <Setter Property="Background" Value="{StaticResource MiddleLightBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BackgroundBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderThumbStyle}" TargetType="{x:Type Thumb}">        
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
@@ -66,18 +68,18 @@
         </Setter>        
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource LowlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsDragging" Value="True">
-                <Setter Property="Background" Value="{StaticResource LowlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>            
         </Style.Triggers>
     </Style>
 
-    <ControlTemplate x:Key="HorizontalSliderTemplate" TargetType="{x:Type Slider}">
+    <ControlTemplate x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=HorizontalMetroSliderTemplate}" TargetType="{x:Type Slider}">
         <Grid Background="{TemplateBinding Background}"
               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid.RowDefinitions>
@@ -92,7 +94,7 @@
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Row="1"
-                       Fill="{StaticResource ForegroundBrush}"
+                       Fill="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"
                        StrokeThickness="0"
                        Height="{TemplateBinding params:Slider.TrackSize}"
                        Visibility="Hidden"/>
@@ -103,20 +105,20 @@
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
                                   Height="{TemplateBinding params:Slider.TrackSize}"
-                                  Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
+                                  Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonValuableStyle}}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
+                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Right}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding params:Slider.ThumbThickness}"
                            Height="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ActualHeight, Mode=OneWay}"
-                           Style="{StaticResource SliderThumbStyle}"/>
+                           Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderThumbStyle}}"/>
                 </Track.Thumb>
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
                                   Height="{TemplateBinding params:Slider.TrackSize}"
-                                  Style="{StaticResource SliderRepeatButtonStyle}"/>
+                                  Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonStyle}}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Row="2"
@@ -127,7 +129,7 @@
         </Grid>
     </ControlTemplate>
 
-    <ControlTemplate x:Key="VerticalSliderTemplate" TargetType="{x:Type Slider}">
+    <ControlTemplate x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=VerticalMetroSliderTemplate}" TargetType="{x:Type Slider}">
         <Grid Background="{TemplateBinding Background}"
               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
             <Grid.ColumnDefinitions>
@@ -142,7 +144,7 @@
                      Visibility="Collapsed"/>
             <Rectangle x:Name="PART_SelectionRange"
                        Grid.Column="1"
-                       Fill="{StaticResource ForegroundBrush}"
+                       Fill="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"
                        StrokeThickness="0"
                        Width="{TemplateBinding params:Slider.TrackSize}"
                        Visibility="Hidden"/>
@@ -153,20 +155,20 @@
                     <RepeatButton Command="{x:Static Slider.DecreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
                                   Width="{TemplateBinding params:Slider.TrackSize}"
-                                  Style="{StaticResource SliderRepeatButtonValuableStyle}"/>
+                                  Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonValuableStyle}}"/>
                 </Track.DecreaseRepeatButton>
                 <Track.Thumb>
-                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Top}"
+                    <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Top}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ActualWidth, Mode=OneWay}"
                            Height="{TemplateBinding params:Slider.ThumbThickness}"
-                           Style="{StaticResource SliderThumbStyle}"/>
+                           Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderThumbStyle}}"/>
                 </Track.Thumb>
                 <Track.IncreaseRepeatButton>
                     <RepeatButton Command="{x:Static Slider.IncreaseLarge}"
                                   IsEnabled="{TemplateBinding IsEnabled}"
                                   Width="{TemplateBinding params:Slider.TrackSize}"
-                                  Style="{StaticResource SliderRepeatButtonStyle}"/>
+                                  Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=MetroSliderRepeatButtonStyle}}"/>
                 </Track.IncreaseRepeatButton>
             </Track>
             <TickBar Grid.Column="2"
@@ -179,9 +181,9 @@
 
     <Style TargetType="{x:Type Slider}">
         <Setter Property="Background" Value="{x:Null}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
@@ -194,19 +196,19 @@
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Style.Triggers>            
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>            
             <Trigger Property="Orientation" Value="Horizontal">                
                 <Setter Property="MinHeight" Value="14"/>
                 <Setter Property="Height" Value="18"/>
                 <Setter Property="MaxHeight" Value="22"/>                
-                <Setter Property="Template" Value="{StaticResource HorizontalSliderTemplate}"/>
+                <Setter Property="Template" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=HorizontalMetroSliderTemplate}}"/>
             </Trigger>            
             <Trigger Property="Orientation" Value="Vertical">                
                 <Setter Property="MinWidth" Value="14"/>
                 <Setter Property="Width" Value="18"/>
                 <Setter Property="MaxWidth" Value="22"/>                
-                <Setter Property="Template" Value="{StaticResource VerticalSliderTemplate}"/>                   
+                <Setter Property="Template" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type Slider}, ResourceId=VerticalMetroSliderTemplate}}"/>                   
             </Trigger>            
         </Style.Triggers>
     </Style>
