--- a/Main/Source code/Elysium/Themes/Scrolls/ScrollBar.xaml
+++ b/Main/Source code/Elysium/Themes/Scrolls/ScrollBar.xaml
@@ -1,14 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
                     xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
-    <Style x:Key="ScrollBarLineDownButtonStyle" TargetType="{x:Type RepeatButton}">        
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineDownButtonStyle}" TargetType="{x:Type RepeatButton}">        
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultThickness), Mode=OneWay}"/>        
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -36,18 +38,18 @@
         </Setter>
         <Style.Triggers>            
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource LowlightBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource ForegroundBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>            
         </Style.Triggers>        
     </Style>
 
-    <Style x:Key="ScrollBarLineUpButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineUpButtonStyle}" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineDownButtonStyle}}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="180"/>
@@ -55,7 +57,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ScrollBarLineLeftButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineLeftButtonStyle}" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineDownButtonStyle}}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="-90"/>
@@ -63,7 +65,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ScrollBarLineRightButtonStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource ScrollBarLineDownButtonStyle}">
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineRightButtonStyle}" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineDownButtonStyle}}">
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <RotateTransform Angle="90"/>
@@ -71,9 +73,9 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ScrollBarPageButtonStyle" TargetType="{x:Type RepeatButton}">
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource TransparentBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarPageButtonStyle}" TargetType="{x:Type RepeatButton}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -94,15 +96,15 @@
         </Setter>        
     </Style>
 
-    <Style x:Key="ScrollBarThumbStyle" TargetType="{x:Type Thumb}">
-        <Setter Property="Background" Value="{StaticResource MiddleLightBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource TransparentBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarThumbStyle}" TargetType="{x:Type Thumb}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Left}"/>
+        <Setter Property="Padding" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Left}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -120,18 +122,18 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource LowlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.LowLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsDragging" Value="True">
-                <Setter Property="Background" Value="{StaticResource ForegroundBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
     
-    <ControlTemplate x:Key="HorizontalScrollBarTemplate" TargetType="{x:Type ScrollBar}">
+    <ControlTemplate x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=HorizontalMetroScrollBarTemplate}" TargetType="{x:Type ScrollBar}">
         <Border Background="{TemplateBinding Background}"
                 BorderBrush="{TemplateBinding BorderBrush}"
                 BorderThickness="{TemplateBinding BorderThickness}"
@@ -145,35 +147,35 @@
                 <RepeatButton Grid.Column="0"
                               Command="{x:Static ScrollBar.LineLeftCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineLeftButtonStyle}"
+                              Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineLeftButtonStyle}}"
                               Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
                        Grid.Column="1">
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageLeftCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
-                                      Style="{StaticResource ScrollBarPageButtonStyle}"/>
+                                      Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarPageButtonStyle}}"/>
                     </Track.DecreaseRepeatButton>
                     <Track.Thumb>
                         <Thumb IsEnabled="{TemplateBinding IsEnabled}"
-                               Style="{StaticResource ScrollBarThumbStyle}"/>
+                               Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarThumbStyle}}"/>
                     </Track.Thumb>
                     <Track.IncreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageRightCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
-                                      Style="{StaticResource ScrollBarPageButtonStyle}"/>
+                                      Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarPageButtonStyle}}"/>
                     </Track.IncreaseRepeatButton>
                 </Track>
                 <RepeatButton Grid.Column="2"
                               Command="{x:Static ScrollBar.LineRightCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineRightButtonStyle}"
+                              Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineRightButtonStyle}}"
                               Visibility="Collapsed"/>
             </Grid>
         </Border>
     </ControlTemplate>
 
-    <ControlTemplate x:Key="VerticalScrollBarTemplate" TargetType="{x:Type ScrollBar}">
+    <ControlTemplate x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=VerticalMetroScrollBarTemplate}" TargetType="{x:Type ScrollBar}">
         <Border Background="{TemplateBinding Background}"
                 BorderBrush="{TemplateBinding BorderBrush}"
                 BorderThickness="{TemplateBinding BorderThickness}"
@@ -187,7 +189,7 @@
                 <RepeatButton Grid.Row="0"
                               Command="{x:Static ScrollBar.LineUpCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineUpButtonStyle}"
+                              Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineUpButtonStyle}}"
                               Visibility="Collapsed"/>
                 <Track x:Name="PART_Track"
                        Grid.Row="1"
@@ -195,30 +197,30 @@
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageUpCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
-                                      Style="{StaticResource ScrollBarPageButtonStyle}"/>
+                                      Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarPageButtonStyle}}"/>
                     </Track.DecreaseRepeatButton>
                     <Track.Thumb>
                         <Thumb IsEnabled="{TemplateBinding IsEnabled}"
-                               Style="{StaticResource ScrollBarThumbStyle}"/>
+                               Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarThumbStyle}}"/>
                     </Track.Thumb>
                     <Track.IncreaseRepeatButton>
                         <RepeatButton Command="{x:Static ScrollBar.PageDownCommand}"
                                       IsEnabled="{TemplateBinding IsEnabled}"
-                                      Style="{StaticResource ScrollBarPageButtonStyle}"/>
+                                      Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarPageButtonStyle}}"/>
                     </Track.IncreaseRepeatButton>
                 </Track>
                 <RepeatButton Grid.Row="2"
                               Command="{x:Static ScrollBar.LineDownCommand}"
                               IsEnabled="{TemplateBinding IsEnabled}"
-                              Style="{StaticResource ScrollBarLineDownButtonStyle}"
+                              Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=MetroScrollBarLineDownButtonStyle}}"
                               Visibility="Collapsed"/>
             </Grid>
         </Border>
     </ControlTemplate>
 
     <Style TargetType="{x:Type ScrollBar}">
-        <Setter Property="Background" Value="{StaticResource TransparentBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>        
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
@@ -226,18 +228,18 @@
         <Setter Property="SnapsToDevicePixels" Value="True"/>        
         <Style.Triggers>
             <Trigger Property="Orientation" Value="Horizontal">
-                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Bottom}"/>
+                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Bottom}"/>
                 <Setter Property="MinHeight" Value="6"/>
                 <Setter Property="Height" Value="6"/>
                 <Setter Property="MaxHeight" Value="10"/>                
-                <Setter Property="Template" Value="{StaticResource HorizontalScrollBarTemplate}"/>                
+                <Setter Property="Template" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=HorizontalMetroScrollBarTemplate}}"/>                
             </Trigger>
             <Trigger Property="Orientation" Value="Vertical">
-                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"/>
+                <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}}, ConverterParameter=Right}"/>
                 <Setter Property="MinWidth" Value="6"/>
                 <Setter Property="Width" Value="6"/>
                 <Setter Property="MaxWidth" Value="10"/>
-                <Setter Property="Template" Value="{StaticResource VerticalScrollBarTemplate}"/>
+                <Setter Property="Template" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ScrollBar}, ResourceId=VerticalMetroScrollBarTemplate}}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
