--- a/Main/Source code/Elysium/Themes/Selectors/ComboBox.xaml
+++ b/Main/Source code/Elysium/Themes/Selectors/ComboBox.xaml
@@ -1,24 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium"
                     xmlns:params="clr-namespace:Elysium.Parameters">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Buttons/ToggleButton.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Scrolls/ScrollBar.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/Scrolls/ScrollViewer.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/SharedResources.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Buttons/ToggleButton.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Scrolls/ScrollBar.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Scrolls/ScrollViewer.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
-    <Style x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">        
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MetroComboBoxToggleButton}" TargetType="{x:Type ToggleButton}">        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Background="{StaticResource TransparentBrush}"
-                            BorderBrush="{StaticResource TransparentBrush}"
+                    <Border Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
+                            BorderBrush="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                             BorderThickness="0"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Polygon x:Name="ArrowGlyph"
-                                 Fill="{StaticResource MiddleLightBrush}"
+                                 Fill="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"
                                  StrokeThickness="0"
                                  Stretch="Uniform"
                                  Margin="{Binding RelativeSource={RelativeSource AncestorType={x:Type ComboBox}}, Path=(params:ComboBox.ArrowMargin), Mode=OneWay}"
@@ -36,7 +38,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type ComboBox}}, Path=IsDropDownOpen, Mode=OneWay}">
-                            <Setter TargetName="ArrowGlyph" Property="Fill" Value="{StaticResource AccentBrush}"/>
+                            <Setter TargetName="ArrowGlyph" Property="Fill" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
                         </DataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -44,12 +46,12 @@
         </Setter>
     </Style>
 
-    <Style x:Key="ComboBoxTextBox" TargetType="{x:Type TextBox}">
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MetroComboBoxTextBox}" TargetType="{x:Type TextBox}">
         <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
         <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
-        <Setter Property="CaretBrush" Value="{StaticResource ForegroundBrush}"/>
-        <Setter Property="SelectionBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="CaretBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
+        <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
@@ -59,8 +61,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border Background="{StaticResource TransparentBrush}"
-                            BorderBrush="{StaticResource TransparentBrush}"
+                    <Border Background="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
+                            BorderBrush="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"
                             BorderThickness="0"
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <ScrollViewer x:Name="PART_ContentHost"
@@ -80,17 +82,17 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}}, ConverterParameter=18}">
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
             </DataTrigger>
         </Style.Triggers>
     </Style>
 
     <Style TargetType="{x:Type ComboBox}">
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.DefaultThickness), Mode=OneWay}"/>
-        <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.ContentFontSize), Mode=OneWay}"/>
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
@@ -98,9 +100,9 @@
         <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
         <Setter Property="TextOptions.TextRenderingMode" Value="ClearType"/>
         <Setter Property="RenderOptions.ClearTypeHint" Value="Enabled"/>
-        <Setter Property="params:General.ShadowBrush" Value="{StaticResource ForegroundBrush}"/>
+        <Setter Property="params:General.ShadowBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
         <Setter Property="Focusable" Value="True"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}}"/>
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto"/>
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="ScrollViewer.CanContentScroll" Value="True"/>
@@ -123,7 +125,7 @@
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:ComboBox.ButtonSize), Converter={StaticResource DoubleToGridLengthConverter}}"/>
+                                    <ColumnDefinition Width="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:ComboBox.ButtonSize), Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToGridLengthConverter}}}"/>
                                 </Grid.ColumnDefinitions>
                                 <Popup x:Name="PART_Popup" 
                                        Grid.Column="0"
@@ -132,7 +134,7 @@
                                        IsOpen="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsDropDownOpen, Mode=TwoWay}"
                                        PlacementTarget="{Binding ElementName=LayoutRoot}"
                                        Placement="Custom"
-                                       VerticalOffset="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Converter={StaticResource ThicknessToDoubleConverter}, ConverterParameter='Bottom'}"
+                                       VerticalOffset="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}}, ConverterParameter='Bottom'}"
                                        CustomPopupPlacementCallback="{x:Static params:DropDown.PopupPlacementCallback}"
                                        PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}"
                                        Tag="{DynamicResource {x:Static SystemParameters.ComboBoxAnimationKey}}">
@@ -148,7 +150,7 @@
                                     <Border x:Name="PopupRoot"
                                             Tag="{DynamicResource {x:Static SystemParameters.DropShadowKey}}">
                                         <ScrollViewer x:Name="DropDownScrollViewer"
-                                                      Background="{StaticResource BackgroundBrush}"
+                                                      Background="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"
                                                       BorderBrush="{TemplateBinding BorderBrush}"
                                                       BorderThickness="{TemplateBinding BorderThickness}"
                                                       Foreground="{TemplateBinding Foreground}"
@@ -169,7 +171,7 @@
                                               Grid.Column="0"
                                               Grid.ColumnSpan="2"
                                               IsChecked="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsDropDownOpen, Mode=TwoWay}"
-                                              Style="{StaticResource ComboBoxToggleButton}"/>
+                                              Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MetroComboBoxToggleButton}}"/>
                                 <ContentPresenter x:Name="ContentPresenter"
                                                   Grid.Column="0"
                                                   Content="{TemplateBinding SelectionBoxItem}"
@@ -191,7 +193,7 @@
                                                   Visibility="Visible"/>
                                 <Grid x:Name="TextBoxLayout"
                                       Grid.Column="0"
-                                      Background="{StaticResource BackgroundBrush}"
+                                      Background="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"
                                       Visibility="Collapsed">
                                     <TextBox x:Name="PART_EditableTextBox"
                                              Foreground="{TemplateBinding Foreground}"
@@ -202,7 +204,7 @@
                                              FontWeight="{TemplateBinding FontWeight}"
                                              IsReadOnly="{TemplateBinding IsReadOnly}"
                                              Margin="{TemplateBinding Padding}"
-                                             Style="{StaticResource ComboBoxTextBox}"/>
+                                             Style="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MetroComboBoxTextBox}}"/>
                                 </Grid>
                             </Grid>
                         </Border>
@@ -226,7 +228,7 @@
                                 <Condition SourceName="PART_Popup" Property="params:DropDown.IsDefaultVerticalPosition" Value="True"/>
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
-                                <Setter TargetName="DropDownScrollViewer" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Right, Bottom'}"/>
+                                <Setter TargetName="DropDownScrollViewer" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Right, Bottom'}"/>
                             </MultiTrigger.Setters>
                         </MultiTrigger>
                         <MultiTrigger>
@@ -235,7 +237,7 @@
                                 <Condition SourceName="PART_Popup" Property="params:DropDown.IsDefaultVerticalPosition" Value="False"/>
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
-                                <Setter TargetName="DropDownScrollViewer" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='Left, Top, Right'}"/>
+                                <Setter TargetName="DropDownScrollViewer" Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=BorderThickness, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}}, ConverterParameter='Left, Top, Right'}"/>
                             </MultiTrigger.Setters>
                         </MultiTrigger>
                         <MultiDataTrigger>
@@ -252,7 +254,7 @@
                                                           Opacity="0.3"/>
                                     </Setter.Value>
                                 </Setter>
-                                <Setter TargetName="PopupRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                                <Setter TargetName="PopupRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                                 <Setter TargetName="PopupRoot" Property="Padding" Value="0,0,6,6"/>
                             </MultiDataTrigger.Setters>
                         </MultiDataTrigger>
@@ -270,7 +272,7 @@
                                                           Opacity="0.3"/>
                                     </Setter.Value>
                                 </Setter>
-                                <Setter TargetName="PopupRoot" Property="Background" Value="{StaticResource TransparentBrush}"/>
+                                <Setter TargetName="PopupRoot" Property="Background" Value="{DynamicResource {x:Static root:Resources.TransparentBrushKey}}"/>
                                 <Setter TargetName="PopupRoot" Property="Padding" Value="0,4,4,0"/>
                             </MultiDataTrigger.Setters>
                         </MultiDataTrigger>
@@ -279,21 +281,21 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource IsGreaterThanConverter}, ConverterParameter=18}">
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=FontSize, Mode=OneWay, Converter={StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}}, ConverterParameter=18}">
                 <Setter Property="TextOptions.TextFormattingMode" Value="Ideal"/>
             </DataTrigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="BorderBrush" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource DisabledBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsGrouping" Value="True">
                 <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
             </Trigger>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
             </Trigger>
             <Trigger Property="IsDropDownOpen" Value="True">
-                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.HighLightBrushKey}}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
