--- a/Main/Source code/Elysium/Themes/Selectors/ComboBoxItem.xaml
+++ b/Main/Source code/Elysium/Themes/Selectors/ComboBoxItem.xaml
@@ -1,12 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
+    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ListBoxItem}, ResourceId=MetroSelectorsItemsBaseStyle}}">
+        <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.BackgroundBrushKey}}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Style.Triggers>
@@ -15,16 +17,16 @@
                     <Condition Property="IsEnabled" Value="True"/>
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
-                <Setter Property="Background" Value="{StaticResource AccentBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource ContrastBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
             </MultiTrigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
                     <Condition Property="IsEnabled" Value="False"/>
                     <Condition Property="IsHighlighted" Value="True"/>
                 </MultiTrigger.Conditions>
-                <Setter Property="Background" Value="{StaticResource DisabledBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource ContrastBrush}"/>
+                <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
             </MultiTrigger>
         </Style.Triggers>        
     </Style>
