--- a/Main/Source code/Elysium/Themes/Selectors/ListBoxItem.xaml
+++ b/Main/Source code/Elysium/Themes/Selectors/ListBoxItem.xaml
@@ -1,11 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">
+    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ListBoxItem}, ResourceId=MetroSelectorsItemsBaseStyle}}">
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
         <Style.Triggers>
@@ -15,8 +17,8 @@
                     <Condition Property="IsSelected" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource AccentBrush}"/>
-                    <Setter Property="Foreground" Value="{StaticResource ContrastBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
             <MultiTrigger>
@@ -25,8 +27,8 @@
                     <Condition Property="IsSelected" Value="True"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="Background" Value="{StaticResource DisabledBrush}"/>
-                    <Setter Property="Foreground" Value="{StaticResource ContrastBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource {x:Static root:Resources.DisabledBrushKey}}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ContrastBrushKey}}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
         </Style.Triggers>        
