--- a/Main/Source code/Elysium/Themes/SharedResources.xaml
+++ b/Main/Source code/Elysium/Themes/SharedResources.xaml
@@ -1,31 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:params="clr-namespace:Elysium.Parameters"
-                    xmlns:converters="clr-namespace:Elysium.Converters">
-    
-<ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/Brushes.xaml"/>
-        <ResourceDictionary Source="/Elysium;component/Themes/LightBrushes.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
+                    xmlns:root="clr-namespace:Elysium"
+                    xmlns:converters="clr-namespace:Elysium.Converters"
+                    xmlns:params="clr-namespace:Elysium.Parameters">
 
-    <converters:DoubleToGridLengthConverter x:Key="DoubleToGridLengthConverter"/>
-    <converters:DoubleToThicknessConverter x:Key="DoubleToThicknessConverter"/>
-    <converters:GridLengthToDoubleConverter x:Key="GridLengthToDoubleConverter"/>
-    <converters:ThicknessToDoubleConverter x:Key="ThicknessToDoubleConverter"/>
-    
-    <converters:PercentToAngleConverter x:Key="PercentToAngleConverter"/>
-    <converters:AngleToCoordinateConverter x:Key="AngleToCoordinateConverter"/>
-    <converters:NumberPositiveToNegativeConverter x:Key="NumberPositiveToNegativeConverter"/>
-    <converters:ThicknessPositiveToNegativeConverter x:Key="ThicknessPositiveToNegativeConverter"/>
-    <converters:ThicknessConverter x:Key="ThicknessConverter"/>
-    <converters:IsGreaterThanConverter x:Key="IsGreaterThanConverter"/>
+    <converters:DoubleToGridLengthConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToGridLengthConverter}"/>
+    <converters:DoubleToThicknessConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=DoubleToThicknessConverter}"/>
+    <converters:GridLengthToDoubleConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=GridLengthToDoubleConverter}"/>
+    <converters:ThicknessToDoubleConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessToDoubleConverter}"/>
 
-    <Style x:Key="FocusVisualStyle">
+    <converters:PercentToAngleConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=PercentToAngleConverter}"/>
+    <converters:AngleToCoordinateConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=AngleToCoordinateConverter}"/>
+    <converters:NumberPositiveToNegativeConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=NumberPositiveToNegativeConverter}"/>
+    <converters:ThicknessPositiveToNegativeConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessPositiveToNegativeConverter}"/>
+    <converters:ThicknessConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=ThicknessConverter}"/>
+    <converters:IsGreaterThanConverter x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=IsGreaterThanConverter}"/>
+
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type root:Resources}, ResourceId=FocusVisualStyle}">
         <Setter Property="Control.Template">
             <Setter.Value>
                 <ControlTemplate>
                     <Rectangle Margin="{TemplateBinding params:General.DefaultPadding}"
-                               Stroke="{StaticResource ForegroundBrush}"
+                               Stroke="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"
                                StrokeThickness="{TemplateBinding params:General.DefaultThicknessValue}"
                                StrokeDashArray="2 1"
                                RenderOptions.EdgeMode="Aliased"/>
