--- a/Main/Source code/Elysium/Themes/TextBoxes/PasswordBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/PasswordBox.xaml
@@ -1,20 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxesBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxesBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource TextBoxesBaseStyle}">        
+    <Style TargetType="{x:Type PasswordBox}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type TextBoxBase}, ResourceId=TextBoxesBaseStyle}}">        
         <Setter Property="PasswordChar" Value="●"/>
-        <Setter Property="CaretBrush" Value="{StaticResource ForegroundBrush}"/>
-        <Setter Property="SelectionBrush" Value="{StaticResource MiddleLightBrush}"/>
+        <Setter Property="CaretBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
+        <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->
         <Style.Triggers>
             <Trigger Property="IsKeyboardFocusWithin" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource AccentBrush}"/>
-                <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
