--- a/Main/Source code/Elysium/Themes/TextBoxes/RichTextBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/RichTextBox.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type RichTextBox}" BasedOn="{StaticResource TextBoxBaseStyle}">        
+    <Style TargetType="{x:Type RichTextBox}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type TextBoxBase}, ResourceId=TextBoxBaseStyle}}">        
         <Style.Resources>
             <Style TargetType="{x:Type FlowDocument}">
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
