--- a/Main/Source code/Elysium/Themes/TextBoxes/TextBox.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/TextBox.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource TextBoxBaseStyle}">
+    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type TextBoxBase}, ResourceId=TextBoxBaseStyle}}">
         <!-- Temporary removed to fix bugs 1144, 1174, 1216 -->
         <!--<Setter Property="OverridesDefaultStyle" Value="True"/>-->        
     </Style>
