--- a/Main/Source code/Elysium/Themes/TextBoxes/TextBoxBase.xaml
+++ b/Main/Source code/Elysium/Themes/TextBoxes/TextBoxBase.xaml
@@ -1,13 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sw="clr-namespace:System.Windows"
+                    xmlns:root="clr-namespace:Elysium">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxesBase.xaml"/>
+        <sw:CachedResourceDictionary Source="/Elysium;component/Themes/TextBoxes/TextBoxesBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="TextBoxBaseStyle" TargetType="{x:Type TextBoxBase}" BasedOn="{StaticResource TextBoxesBaseStyle}">        
-        <Setter Property="CaretBrush" Value="{StaticResource ForegroundBrush}"/>
-        <Setter Property="SelectionBrush" Value="{StaticResource MiddleLightBrush}"/>
+    <Style x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type TextBoxBase}, ResourceId=TextBoxBaseStyle}" TargetType="{x:Type TextBoxBase}" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type TextBoxBase}, ResourceId=TextBoxesBaseStyle}}">        
+        <Setter Property="CaretBrush" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
+        <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static root:Resources.MiddleLightBrushKey}}"/>
         <Style.Triggers>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
@@ -15,8 +17,8 @@
                     <Condition Property="IsReadOnly" Value="False"/>
                 </MultiTrigger.Conditions>
                 <MultiTrigger.Setters>
-                    <Setter Property="BorderBrush" Value="{StaticResource AccentBrush}"/>
-                    <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource {x:Static root:Resources.AccentBrushKey}}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource {x:Static root:Resources.ForegroundBrushKey}}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
         </Style.Triggers>        
