- Fixed critical bug 1433 - Fixed some issues - Code style fixes and improvements - Refactoring

--- a/2.0/Source code/Elysium/Themes/Menus/MenuItem.xaml
+++ b/2.0/Source code/Elysium/Themes/Menus/MenuItem.xaml
@@ -247,7 +247,7 @@
                     </Polygon.Points>
                 </Polygon>
                 <Popup x:Name="PART_Popup"
-                       Grid.IsSharedSizeScope="True"
+                       Grid.Column="0" Grid.IsSharedSizeScope="True"
                        AllowsTransparency="True"
                        Focusable="False"
                        Placement="Right"
