--- a/2.0/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
+++ b/2.0/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:params="clr-namespace:Elysium.Parameters"
                     xmlns:controls="clr-namespace:Elysium.Controls">
 
@@ -16,6 +15,9 @@
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource TransparentBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+        <Setter Property="MinWidth" Value="32"/>
+        <Setter Property="MinHeight" Value="32"/>
+        <Setter Property="ToolTipService.ShowOnDisabled" Value="True"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource HighlightBrush}"/>
@@ -34,6 +36,9 @@
         <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource AccentBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
+        <Setter Property="MinWidth" Value="32"/>
+        <Setter Property="MinHeight" Value="32"/>
+        <Setter Property="ToolTipService.ShowOnDisabled" Value="True"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource SemitransparentContrastBrush}"/>
@@ -86,8 +91,8 @@
                                   Grid.Row="0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
@@ -104,10 +109,10 @@
                                            Text="{TemplateBinding Title}"
                                            FontSize="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.TitleFontSize), Mode=OneWay}"
                                            FontWeight="Normal"
+                                           TextTrimming="CharacterEllipsis"
                                            Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPadding), Mode=OneWay}"
                                            VerticalAlignment="Center"/>
-                                <Decorator x:Name="TitleBarHost"
-                                           Grid.Column="2"
+                                <Decorator Grid.Column="2"
                                            Grid.Row="0" Grid.RowSpan="2"
                                            controls:Window.IsTitleBarHost="True"
                                            shell:WindowChrome.IsHitTestVisibleInChrome="True"/>
@@ -124,9 +129,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Minimize}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MinimizeButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource MinimizeIcon}"
                                               Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -137,9 +140,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Maximize}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MaximizeButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource MaximizeIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -150,9 +151,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Restore}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.RestoreButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
                                             Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32"
                                             Visibility="Hidden">
                                         <Path Data="{StaticResource RestoreIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
@@ -164,9 +163,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Close}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.CloseButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource CloseIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -174,6 +171,7 @@
                                     </Button>
                                 </Grid>
                                 <controls:ProgressBar x:Name="PART_ProgressBar"
+                                                      Grid.Column="0"
                                                       Grid.ColumnSpan="4"
                                                       Grid.Row="0"
                                                       Background="{DynamicResource TransparentBrush}"
@@ -187,8 +185,7 @@
                                               RenderOptions.ClearTypeHint="{TemplateBinding RenderOptions.ClearTypeHint}">
                                 <ContentPresenter Margin="{TemplateBinding Padding}"/>
                             </AdornerDecorator>
-                            <Decorator x:Name="ApplicationBarHost"
-                                       Grid.Row="1"
+                            <Decorator Grid.Row="1"
                                        controls:Window.IsApplicationBarHost="True"/>
                             <ResizeGrip x:Name="PART_Grip"
                                         Grid.Row="1"
@@ -210,10 +207,10 @@
                             <Setter TargetName="PART_Caption" Property="Background" Value="{DynamicResource AccentBrush}"/>
                             <Setter TargetName="PART_ProgressBar" Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
                             <Setter TargetName="PART_Title" Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
-                            <Setter TargetName="PART_Minimize" Property="Style" Value="{DynamicResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
-                            <Setter TargetName="PART_Maximize" Property="Style" Value="{DynamicResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
-                            <Setter TargetName="PART_Restore" Property="Style" Value="{DynamicResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
-                            <Setter TargetName="PART_Close" Property="Style" Value="{DynamicResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
+                            <Setter TargetName="PART_Minimize" Property="Style" Value="{StaticResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
+                            <Setter TargetName="PART_Maximize" Property="Style" Value="{StaticResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
+                            <Setter TargetName="PART_Restore" Property="Style" Value="{StaticResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
+                            <Setter TargetName="PART_Close" Property="Style" Value="{StaticResource {x:Static controls:Window.MainWindowCaptionButtonStyleKey}}"/>
                         </Trigger>
                         <Trigger Property="WindowState" Value="Maximized">
                             <Setter TargetName="PART_Maximize" Property="Visibility" Value="Hidden"/>
