--- a/Main/Source code/.NET Framework 4.5/Elysium/Themes/Windows/Window.xaml
+++ b/Main/Source code/.NET Framework 4.5/Elysium/Themes/Windows/Window.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:params="clr-namespace:Elysium.Parameters"
                     xmlns:controls="clr-namespace:Elysium.Controls">
 
@@ -15,6 +14,9 @@
         <Setter Property="Background" Value="{DynamicResource TransparentBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource TransparentBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+        <Setter Property="MinWidth" Value="32"/>
+        <Setter Property="MinHeight" Value="32"/>
+        <Setter Property="ToolTipService.ShowOnDisabled" Value="True"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource HighlightBrush}"/>
@@ -33,6 +35,9 @@
         <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource AccentBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
+        <Setter Property="MinWidth" Value="32"/>
+        <Setter Property="MinHeight" Value="32"/>
+        <Setter Property="ToolTipService.ShowOnDisabled" Value="True"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource SemitransparentContrastBrush}"/>
@@ -85,8 +90,8 @@
                                   Grid.Row="0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
@@ -103,10 +108,10 @@
                                            Text="{TemplateBinding Title}"
                                            FontSize="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.TitleFontSize), Mode=OneWay}"
                                            FontWeight="Normal"
+                                           TextTrimming="CharacterEllipsis"
                                            Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:General.BoldPadding), Mode=OneWay}"
                                            VerticalAlignment="Center"/>
-                                <Decorator x:Name="TitleBarHost"
-                                           Grid.Column="2"
+                                <Decorator Grid.Column="2"
                                            Grid.Row="0" Grid.RowSpan="2"
                                            controls:Window.IsTitleBarHost="True"
                                            WindowChrome.IsHitTestVisibleInChrome="True"/>
@@ -123,9 +128,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Minimize}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MinimizeButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource MinimizeIcon}"
                                               Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -136,9 +139,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Maximize}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MaximizeButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource MaximizeIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -149,9 +150,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Restore}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.RestoreButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
                                             Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32"
                                             Visibility="Hidden">
                                         <Path Data="{StaticResource RestoreIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
@@ -163,9 +162,7 @@
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Close}"
                                             ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.CloseButtonToolTip), Mode=OneWay}"
-                                            ToolTipService.ShowOnDisabled="True"
-                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}"
-                                            MinWidth="32" MinHeight="32">
+                                            Style="{DynamicResource {x:Static controls:Window.DefaultCaptionButtonStyleKey}}">
                                         <Path Data="{StaticResource CloseIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
                                               Stretch="None"
@@ -173,7 +170,7 @@
                                     </Button>
                                 </Grid>
                                 <controls:ProgressBar x:Name="PART_ProgressBar"
-                                                      Grid.ColumnSpan="4"
+                                                      Grid.Column="0" Grid.ColumnSpan="4"
                                                       Grid.Row="0"
                                                       Background="{DynamicResource TransparentBrush}"
                                                       Value="{TemplateBinding Progress}"
@@ -186,8 +183,7 @@
                                               RenderOptions.ClearTypeHint="{TemplateBinding RenderOptions.ClearTypeHint}">
                                 <ContentPresenter Margin="{TemplateBinding Padding}"/>
                             </AdornerDecorator>
-                            <Decorator x:Name="ApplicationBarHost"
-                                       Grid.Row="1"
+                            <Decorator Grid.Row="1"
                                        controls:Window.IsApplicationBarHost="True"/>
                             <ResizeGrip x:Name="PART_Grip"
                                         Grid.Row="1"
